# rad-rpc-2.0-beta

./: Cargo.toml  Config.json  README.md
examples/contract_calls_svelte/: package-lock.json  package.json
examples/contract_calls_svelte/src/: App.svelte
src/: config.rs  formatter.rs  json_rpc_thread.rs  main.rs  scrypto_helpers.rs  setup.rs
