[package]
name = "rad-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.2.0" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.2.0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.2.0" }
jsonrpc-core = "18.0.0"
jsonrpc-tcp-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-http-server = "18.0.0"
lazy_static = "1.4"
serde = { version = "1.0.132", features = ["derive"] }
parking_lot = "0.11.2"
hex = "0.4.3"
